<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighgreybackground"
    tools:context="com.example.brendan.myfirstapp.MainActivity">

    <include layout="@layout/include_title"
        android:id="@+id/include2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="125dp"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#3EA9F3"
        android:onClick="sendMessage"
        android:text="@string/send"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="230dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:onClick="addEvent"
        android:background="#3EA9F3"
        android:textColor="#ffffff"
        android:text="@string/add_event"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="298dp"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintHorizontal_bias="0.501" />

</android.support.constraint.ConstraintLayout>
