<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighgreybackground"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <include layout="@layout/include_title" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_event_type"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:background="@color/clear"
                android:focusable="false"
                android:hint="@string/game"
                android:inputType="textCapWords"
                android:padding="@dimen/edittext_padding"
                android:textColorHint="@color/texthint"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <ImageView
                android:id="@+id/iv_event_type_arrow"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginEnd="@dimen/margin_right"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/arrow_down"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:contentDescription="@null"
            android:background="@color/lightgray" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_opponent"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:background="@color/clear"
                android:focusable="false"
                android:hint="@string/opponent"
                android:inputType="textCapWords"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/texthint"
                android:textSize="@dimen/normal_text_size" />

            <ImageView
                android:id="@+id/iv_opponent_arrow"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginEnd="@dimen/margin_right"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/arrow_down"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:contentDescription="@null"
            android:background="@color/lightgray" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:background="@color/clear"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="date"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/texthint"
                android:textSize="@dimen/normal_text_size" />

            <ImageView
                android:id="@+id/iv_date_arrow"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginEnd="@dimen/margin_right"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/arrow_down"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:contentDescription="@null"
            android:background="@color/lightgray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llyt_event_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_time_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    android:hint="@string/time"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:padding="@dimen/edittext_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/texthint"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="NestedWeights" />


                <ImageView
                    android:id="@+id/iv_time_arrow"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginEnd="@dimen/margin_right"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/arrow_down"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:background="@color/lightgray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tbd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_tbd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    android:hint="@string/time_tbd"
                    android:focusable="false"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:padding="@dimen/edittext_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/texthint"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="NestedWeights" />

                <ToggleButton
                    android:id="@+id/tgl_tbd"
                    android:layout_width="@dimen/toggle_width"
                    android:layout_height="@dimen/toggle_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_right"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@drawable/toggle_selector"
                    android:checked="true"
                    android:padding="0dp"
                    android:textOff="@null"
                    android:textOn="@null"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:contentDescription="@null"
            android:background="@color/lightgray" />

        <LinearLayout
            android:id="@+id/ll_jersey_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/ll_home_away"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_home_away"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    android:focusable="false"
                    android:hint="@string/home_away"
                    android:inputType="textCapWords"
                    android:padding="@dimen/edittext_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/texthint"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="NestedWeights" />


                <ImageView
                    android:id="@+id/iv_home_away_arrow"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginEnd="@dimen/margin_right"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/arrow_down"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:background="@color/lightgray" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_uniform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_unifom"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_weight="1"
                    android:background="@color/clear"
                    android:hint="@string/uniform"
                    android:inputType="textCapWords"
                    android:padding="@dimen/edittext_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/texthint"
                    android:textSize="@dimen/normal_text_size"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:contentDescription="@null"
            android:background="@color/lightgray" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ll_location_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/et_location"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:background="@color/clear"
                android:focusable="false"
                android:hint="@string/location"
                android:inputType="textCapWords"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/texthint"
                android:textSize="@dimen/normal_text_size"
                tools:ignore="NestedWeights" />


            <ImageView
                android:id="@+id/iv_location_arrow"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginEnd="@dimen/margin_right"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/arrow_down"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ll_note_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/et_note"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="@color/clear"
                android:hint="@string/notes"
                android:inputType="textCapWords"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/texthint"
                android:textSize="@dimen/normal_text_size"
                tools:ignore="NestedWeights" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ll_notify_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/et_notify_team"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight="1"
                android:background="@color/white"
                android:focusable="false"
                android:hint="@string/add_message_notify"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/texthint"
                android:textSize="@dimen/normal_text_size"
                tools:ignore="NestedWeights" />

            <ToggleButton
                android:id="@+id/tgl_notify_team"
                android:layout_width="@dimen/toggle_width"
                android:layout_height="@dimen/toggle_height"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginRight="@dimen/margin_right"
                android:background="@drawable/toggle_selector"
                android:checked="true"
                android:padding="0dp"
                android:textOff="@null"
                android:textOn="@null"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
